--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -11,7 +11,7 @@
         android:layout_height="160dip"
         android:layout_margin="5dp"
         android:gravity="top"
-        android:hint="请输入需要翻译的句子..." >
+        android:text="请输入需要翻译的句子..." >
     </EditText>
 
     <LinearLayout
@@ -25,7 +25,7 @@
             android:layout_height="36dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
-            android:background="@drawable/ecbtn" >
+            android:background="@drawable/cebtn" >
         </ImageButton>
 
         <Button
