--- a/res/layout/logo.xml
+++ b/res/layout/logo.xml
@@ -10,6 +10,6 @@
         android:id="@+id/logoIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo" />
+        android:src="@drawable/movie" />
 
 </LinearLayout>
